# Kronecker

./: CMakeLists.txt  conanfile.py
.github/workflows/: linux.yml  macos.yml  windows.yml
app/: CMakeLists.txt  main.cpp
cmake/: Helpers.cmake
docker/: Base.Dockerfile  Dev.Dockerfile
